[package]
name = "polymarket-arb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

anyhow = "1.0"

rs-clob-client = { git = "https://github.com/polymarket/rs-clob-client" }
